--- a/invenio.cfg
+++ b/invenio.cfg
@@ -212,13 +212,34 @@ APP_RDM_DEPOSIT_FORM_PUBLISH_MODAL_EXTRA = """
 
 # invenio-oauthclient
 # -------------------
+#   https://graph.microsoft.com/v1.0/me
+#   Response example
+# {
+#     "@odata.context": "https://graph.microsoft.com/v1.0/$metadata#users/$entity",
+#     "businessPhones": [
+#         "+1 412 555 0109"
+#     ],
+#     "displayName": "Megan Bowen",
+#     "givenName": "Megan",
+#     "jobTitle": "Auditor",
+#     "mail": "MeganB@M365x214355.onmicrosoft.com",
+#     "mobilePhone": null,
+#     "officeLocation": "12/1110",
+#     "preferredLanguage": "en-US",
+#     "surname": "Bowen",
+#     "userPrincipalName": "MeganB@M365x214355.onmicrosoft.com",
+#     "id": "48d31887-5fad-4d73-a9f5-3c356e68a038"
+# }
 
+import requests
+import json
 from invenio_oauthclient.contrib.settings import OAuthSettingsHelper
 from invenio_oauthclient import current_oauthclient
+from invenio_db import db
 
 class MyOAuthSettingsHelper(OAuthSettingsHelper):
     """Default configuration for Azure OAuth provider."""
-    import pdb;pdb.pdb.set_trace()
+    # import pdb;pdb.pdb.set_trace()
     def __init__(
         self,
         title=None,
@@ -232,23 +253,24 @@ class MyOAuthSettingsHelper(OAuthSettingsHelper):
         signup_options=None,
     ):
         """Constructor."""
+        base_url="https://login.microsoftonline.com"
         access_token_url ="https://login.microsoftonline.com/organizations/oauth2/v2.0/token"
         authorize_url ="https://login.microsoftonline.com/organizations/oauth2/v2.0/authorize"
         signup_options = {"auto_confirm": True, "send_register_msg": False}
+        request_token_params = {"scope": "openid email profile"} # https://learn.microsoft.com/en-us/azure/active-directory/develop/scopes-oidc"
+        content_type="application/json"
         super().__init__(
             title=title or "Azure SSO",
             description=description or "Microsoft Outlook",
             base_url=base_url
             or "https://login.microsoftonline.com/organizations/oauth2/v2.0/authorize",
+            request_token_params=request_token_params,
             app_key=app_key or "MY_APP_CREDENTIALS",
-            access_token_url=access_token_url
-            or "https://login.microsoftonline.com/organizations/oauth2/v2.0/token",
-            authorize_url=authorize_url
-            or "https://login.microsoftonline.com/organizations/oauth2/v2.0/authorize",
-            content_type="application/json",
+            access_token_url=access_token_url,
             precedence_mask=precedence_mask,
+            content_type=content_type,
             signup_options=signup_options,
-            request_token_params=request_token_params or {"scope": "openid email profile"}, # https://learn.microsoft.com/en-us/azure/active-directory/develop/scopes-oidc"
+            authorize_url=authorize_url,
         )
         self._handlers = dict(
             authorized_handler="invenio_oauthclient.handlers"
@@ -302,28 +324,75 @@ def my_account_info_serializer(remote, resp, **kwargs):
     :param resp: The response of the `authorized` endpoint.
     :returns: A dictionary with serialized user information.
     """
-    return {
-        "external_id": resp.get("azure"),
-        "external_method": remote.name,
-        "user": {
-            "email": resp.get("email"),
-            "profile": {
-                "full_name": resp.get("name"),
-            },
-        },
-    }
+    external_id = str(resp.get("id"))
+    email = str(resp.get("userPrincipalName")).lower()
+    username = f"{resp.get('givenName')}_{resp.get('id').split('-')[0]}"
+    full_name = str(resp.get("displayName"))
+    external_method = str(remote.name)
+    affiliation= str(resp.get("jobTitle", "User"))
+    return dict(
+        user=dict(
+            email=email,
+            profile=dict(username=username, full_name=full_name),
+        ),
+        external_id=external_id,
+        external_method=external_method,
+        affiliations=affiliation,
+        active=True,
+    )
+    # return {
+    #     "external_id": str(resp.get("id")),
+    #     "external_method": str(remote.name),
+    #     "user": {
+    #         "email": str(resp.get("userPrincipalName")),
+    #         "username": f"{resp.get('givenName')}_{resp.get('id').split('-')[0]}",
+    #         "profile": {
+    #             "full_name": str(resp.get("displayName")),
+    #             "affiliations": str(resp.get("jobTitle", "User")) # User as default affiliation
+    #         },
+    #     },
+    # }
 
 def my_account_info(remote, resp):
-    """ ""Retrieve remote account information used to find local user."""
+    """Retrieve remote account information used to find local user."""
     handlers = current_oauthclient.signup_handlers[remote.name]
     # `remote` param automatically injected via `make_handler` helper
-    return handlers["info_serializer"](resp)
+    graph_base_url = "https://graph.microsoft.com/v1.0/me"
+
+    if "access_token" in resp:
+        graph_data = requests.get(graph_base_url,
+        headers={'Authorization': 'Bearer ' + resp['access_token']}, timeout=10).json()
+
+    return handlers["info_serializer"](graph_data)
 
 
-def my_account_setup():
-    """Account setup."""
-    # import pdb;pdb.set_trace()
-    import pdb;pdb.pdb.set_trace()
+def my_account_setup(remote, token, resp):
+    """Perform additional setup after user have been logged in."""
+    # resource = get_resource(remote)
+    # import pdb;pdb.pdb.set_trace()
+    # TODO Create user <-> external id link.
+# resp -> has the token data
+
+# (Pdb) p token.remote_account
+# Remote Account <id=4, user_id=4>
+
+
+    # with db.session.begin_nested():
+    #     person_id = resource.get("PersonID", [None])
+    #     external_id = resource.get("uidNumber", person_id)[0]
+
+    #     # Set CERN person ID in extra_data.
+    #     token.remote_account.extra_data = {
+    #         "external_id": external_id,
+    #     }
+    #     groups = account_groups_and_extra_data(token.remote_account, resource)
+    #     assert not isinstance(g.identity, AnonymousIdentity)
+    #     extend_identity(g.identity, groups)
+
+    #     user = token.remote_account.user
+
+    #     # Create user <-> external id link.
+    #     oauth_link_external_id(user, dict(id=external_id, method="cern"))
     pass
 
 
@@ -333,10 +402,25 @@ myOAuthHelper = MyOAuthSettingsHelper()
 
 
 OAUTHCLIENT_REMOTE_APPS = dict(
-    azureauth=myOAuthHelper.remote_app,
+    azure=myOAuthHelper.remote_app,
 )
 
 MY_APP_CREDENTIALS = dict(
     consumer_key=environ.get("CONSUMER_KEY"),
     consumer_secret=environ.get("CONSUMER_SECRET"),
 )
+
+# TODO install msal>=0.6.1,<2
+# https://github.com/AzureAD/microsoft-authentication-library-for-python#usage
+# https://github.com/AzureAD/microsoft-authentication-library-for-python/blob/dev/sample/confidential_client_secret_sample.py
+# https://www.youtube.com/watch?v=1Jyd7SA-0kI&ab_channel=JieJenn
+
+
+# (Pdb) p resp
+# {
+# 'token_type': 'Bearer',
+# 'scope': 'openid profile email User.Read',
+# 'expires_in': 3889,
+# 'ext_expires_in': 3889,
+# 'access_token':'asdfsdfsdf',
+# 'id_token': 'sdfgsdfgsdgf'}
