--- a/invenio.cfg
+++ b/invenio.cfg
@@ -232,11 +232,10 @@ APP_RDM_DEPOSIT_FORM_PUBLISH_MODAL_EXTRA = """
 # }
 
 import requests
-import json
 from invenio_oauthclient.contrib.settings import OAuthSettingsHelper
+from invenio_oauthclient.utils import oauth_link_external_id, oauth_unlink_external_id
 from invenio_oauthclient import current_oauthclient
 from invenio_db import db
-
 class MyOAuthSettingsHelper(OAuthSettingsHelper):
     """Default configuration for Azure OAuth provider."""
     # import pdb;pdb.pdb.set_trace()
@@ -260,7 +259,7 @@ class MyOAuthSettingsHelper(OAuthSettingsHelper):
         request_token_params = {"scope": "openid email profile"} # https://learn.microsoft.com/en-us/azure/active-directory/develop/scopes-oidc"
         content_type="application/json"
         super().__init__(
-            title=title or "Azure SSO",
+            title=title or "KTH SSO",
             description=description or "Microsoft Outlook",
             base_url=base_url
             or "https://login.microsoftonline.com/organizations/oauth2/v2.0/authorize",
@@ -340,66 +339,52 @@ def my_account_info_serializer(remote, resp, **kwargs):
         affiliations=affiliation,
         active=True,
     )
-    # return {
-    #     "external_id": str(resp.get("id")),
-    #     "external_method": str(remote.name),
-    #     "user": {
-    #         "email": str(resp.get("userPrincipalName")),
-    #         "username": f"{resp.get('givenName')}_{resp.get('id').split('-')[0]}",
-    #         "profile": {
-    #             "full_name": str(resp.get("displayName")),
-    #             "affiliations": str(resp.get("jobTitle", "User")) # User as default affiliation
-    #         },
-    #     },
-    # }
+
+
+def fetch_user_graph_data(token):
+    """Fetch Microsoft Graph data for current user."""
+    azure_graph_me_url = "https://graph.microsoft.com/v1.0/me"
+    timeout = 10
+    if not token:
+        raise ValueError("Token is empty or None")
+    try:
+        response = requests.get(azure_graph_me_url, headers={'Authorization': 'Bearer ' + token}, timeout=timeout)
+        response.raise_for_status()
+        data = response.json()
+        return data
+    except requests.exceptions.HTTPError as err:
+        message = f"HTTP error occurred: {err}"
+    except requests.exceptions.Timeout as err:
+        message = f"Request timed out: {err}"
+    except requests.exceptions.RequestException as err:
+        message = f"An error occurred: {err}"
+    raise ValueError(message)
+
 
 def my_account_info(remote, resp):
     """Retrieve remote account information used to find local user."""
     handlers = current_oauthclient.signup_handlers[remote.name]
-    # `remote` param automatically injected via `make_handler` helper
-    graph_base_url = "https://graph.microsoft.com/v1.0/me"
-
     if "access_token" in resp:
-        graph_data = requests.get(graph_base_url,
-        headers={'Authorization': 'Bearer ' + resp['access_token']}, timeout=10).json()
-
-    return handlers["info_serializer"](graph_data)
+        graph_data = fetch_user_graph_data(resp['access_token'])
+        return handlers["info_serializer"](graph_data)
 
 
 def my_account_setup(remote, token, resp):
     """Perform additional setup after user have been logged in."""
-    # resource = get_resource(remote)
+    # pylint: disable=no-member
+    with db.session.begin_nested():
+        graph_data = fetch_user_graph_data(token.access_token)
+        user = token.remote_account.user
+        external_id = str(graph_data.get("id"))
+        token.remote_account.extra_data = {
+            "external_id": external_id,
+        }
+        oauth_link_external_id(user, dict(id=external_id, method="azure"))
+
+
     # import pdb;pdb.pdb.set_trace()
-    # TODO Create user <-> external id link.
-# resp -> has the token data
-
-# (Pdb) p token.remote_account
-# Remote Account <id=4, user_id=4>
-
-
-    # with db.session.begin_nested():
-    #     person_id = resource.get("PersonID", [None])
-    #     external_id = resource.get("uidNumber", person_id)[0]
-
-    #     # Set CERN person ID in extra_data.
-    #     token.remote_account.extra_data = {
-    #         "external_id": external_id,
-    #     }
-    #     groups = account_groups_and_extra_data(token.remote_account, resource)
-    #     assert not isinstance(g.identity, AnonymousIdentity)
-    #     extend_identity(g.identity, groups)
-
-    #     user = token.remote_account.user
-
-    #     # Create user <-> external id link.
-    #     oauth_link_external_id(user, dict(id=external_id, method="cern"))
-    pass
-
 
 myOAuthHelper = MyOAuthSettingsHelper()
-
-
-
 
 OAUTHCLIENT_REMOTE_APPS = dict(
     azure=myOAuthHelper.remote_app,
@@ -410,17 +395,7 @@ MY_APP_CREDENTIALS = dict(
     consumer_secret=environ.get("CONSUMER_SECRET"),
 )
 
-# TODO install msal>=0.6.1,<2
 # https://github.com/AzureAD/microsoft-authentication-library-for-python#usage
 # https://github.com/AzureAD/microsoft-authentication-library-for-python/blob/dev/sample/confidential_client_secret_sample.py
 # https://www.youtube.com/watch?v=1Jyd7SA-0kI&ab_channel=JieJenn
 
-
-# (Pdb) p resp
-# {
-# 'token_type': 'Bearer',
-# 'scope': 'openid profile email User.Read',
-# 'expires_in': 3889,
-# 'ext_expires_in': 3889,
-# 'access_token':'asdfsdfsdf',
-# 'id_token': 'sdfgsdfgsdgf'}
