--- a/invenio.cfg
+++ b/invenio.cfg
@@ -232,11 +232,16 @@ APP_RDM_DEPOSIT_FORM_PUBLISH_MODAL_EXTRA = """
 # }
 
 import requests
+from flask import current_app, redirect, url_for
 from invenio_oauthclient.contrib.settings import OAuthSettingsHelper
 from invenio_oauthclient.utils import oauth_link_external_id, oauth_unlink_external_id
+from invenio_oauthclient.handlers.utils import require_more_than_one_external_account
+from invenio_oauthclient.handlers.rest import response_handler
+from invenio_oauthclient.models import RemoteAccount
+from flask_login import current_user
 from invenio_oauthclient import current_oauthclient
 from invenio_db import db
-class MyOAuthSettingsHelper(OAuthSettingsHelper):
+class AzureOAuthSettingsHelper(OAuthSettingsHelper):
     """Default configuration for Azure OAuth provider."""
     # import pdb;pdb.pdb.set_trace()
     def __init__(
@@ -264,7 +269,7 @@ class MyOAuthSettingsHelper(OAuthSettingsHelper):
             base_url=base_url
             or "https://login.microsoftonline.com/organizations/oauth2/v2.0/authorize",
             request_token_params=request_token_params,
-            app_key=app_key or "MY_APP_CREDENTIALS",
+            app_key=app_key or "AZURE_APP_CREDENTIALS",
             access_token_url=access_token_url,
             precedence_mask=precedence_mask,
             content_type=content_type,
@@ -274,11 +279,11 @@ class MyOAuthSettingsHelper(OAuthSettingsHelper):
         self._handlers = dict(
             authorized_handler="invenio_oauthclient.handlers"
             ":authorized_signup_handler",
-            disconnect_handler=my_disconnect_handler,
+            disconnect_handler=azure_disconnect_handler,
             signup_handler=dict(
-                info_serializer=my_account_info_serializer,
-                info=my_account_info,
-                setup=my_account_setup,
+                info_serializer=azure_account_info_serializer,
+                info=azure_account_info,
+                setup=azure_account_setup,
                 view="invenio_oauthclient.handlers:signup_handler",
             ),
         )
@@ -286,10 +291,10 @@ class MyOAuthSettingsHelper(OAuthSettingsHelper):
         self._rest_handlers = dict(
             authorized_handler="invenio_oauthclient.handlers.rest"
             ":authorized_signup_handler",
-            disconnect_handler=my_disconnect_handler,
+            disconnect_handler=disconnect_rest_handler,
             signup_handler=dict(
-                info=my_account_info,
-                setup=my_account_setup,
+                info=azure_account_info,
+                setup=azure_account_setup,
                 view="invenio_oauthclient.handlers.rest:signup_handler",
             ),
             response_handler="invenio_oauthclient.handlers.rest"
@@ -299,7 +304,6 @@ class MyOAuthSettingsHelper(OAuthSettingsHelper):
             signup_redirect_url="/",
             error_redirect_url="/",
         )
-
     def get_handlers(self):
         """Return Azure auth handlers."""
         return self._handlers
@@ -308,16 +312,50 @@ class MyOAuthSettingsHelper(OAuthSettingsHelper):
         """Return Azure auth REST handlers."""
         return self._rest_handlers
 
-
-def my_disconnect_handler(remote, *args, **kwargs):
+@require_more_than_one_external_account
+def _disconnect(remote, *args, **kwargs):
     """Handle unlinking of remote account.
 
     :param remote: The remote application.
     """
-    pass
+
+    # import pdb;pdb.pdb.set_trace()
+    if not current_user.is_authenticated:
+        return current_app.login_manager.unauthorized()
+
+    account = RemoteAccount.get(
+        user_id=current_user.get_id(), client_id=remote.consumer_key
+    )
+    user_external_id = account.extra_data.get("external_id")
+
+    if user_external_id:
+        oauth_unlink_external_id({"method": "azure", "id": user_external_id})
+    if account:
+        # pylint: disable=no-member
+        with db.session.begin_nested():
+            account.delete()
+
+def azure_disconnect_handler(remote, *args, **kwargs):
+    """Handle unlinking of remote account.
+
+    :param remote: The remote application.
+    """
+    _disconnect(remote, *args, **kwargs)
+    return redirect(url_for("invenio_oauthclient_settings.index"))
+
+def disconnect_rest_handler(remote, *args, **kwargs):
+    """Handle unlinking of remote account.
+
+    :param remote: The remote application.
+    """
+    _disconnect(remote, *args, **kwargs)
+    redirect_url = current_app.config["OAUTHCLIENT_REST_REMOTE_APPS"][remote.name][
+        "disconnect_redirect_url"
+    ]
+    return response_handler(remote, redirect_url)
 
 
-def my_account_info_serializer(remote, resp, **kwargs):
+def azure_account_info_serializer(remote, resp, **kwargs):
     """Serialize the account info response object.
     :param remote: The remote application.
     :param resp: The response of the `authorized` endpoint.
@@ -361,7 +399,7 @@ def fetch_user_graph_data(token):
     raise ValueError(message)
 
 
-def my_account_info(remote, resp):
+def azure_account_info(remote, resp):
     """Retrieve remote account information used to find local user."""
     handlers = current_oauthclient.signup_handlers[remote.name]
     if "access_token" in resp:
@@ -369,7 +407,7 @@ def my_account_info(remote, resp):
         return handlers["info_serializer"](graph_data)
 
 
-def my_account_setup(remote, token, resp):
+def azure_account_setup(remote, token, resp):
     """Perform additional setup after user have been logged in."""
     # pylint: disable=no-member
     with db.session.begin_nested():
@@ -384,13 +422,13 @@ def my_account_setup(remote, token, resp):
 
     # import pdb;pdb.pdb.set_trace()
 
-myOAuthHelper = MyOAuthSettingsHelper()
+AzureOAuthHelper = AzureOAuthSettingsHelper()
 
 OAUTHCLIENT_REMOTE_APPS = dict(
-    azure=myOAuthHelper.remote_app,
+    azure=AzureOAuthHelper.remote_app,
 )
 
-MY_APP_CREDENTIALS = dict(
+AZURE_APP_CREDENTIALS = dict(
     consumer_key=environ.get("CONSUMER_KEY"),
     consumer_secret=environ.get("CONSUMER_SECRET"),
 )
